--- a/styly.css
+++ b/styly.css
@@ -25,6 +25,15 @@ h1 {
 .container {
     display: flex;
     margin: 20px 0 0 10px;
+    width: 1281px;
+    height: 360px;
+    gap: 0px;
+    border-radius: 24px;
+    border: 4px;
+    opacity: 0px;
+    background: linear-gradient(180deg, rgba(107, 125, 222, 0.12) 0%, #2921A5 100%);
+    border: 4px solid #6B7DDE3D;
+    box-shadow: 0px 24px 48px 0px #172B97B8;
 }
 
 p {
@@ -129,9 +138,10 @@ button:active {
     font-size: 16px;
     font-weight: 400;
     line-height: 16px;
-    text-align: center;    
+    text-align: center;
+    margin: 11px 0 0 17px;
 }
 
 .btn-img {
-    margin-top: 7px;
+    margin: 7px 0 0 7px;
 }
